aadded README with app description

--- a/WeatherStation/index.html
+++ b/WeatherStation/index.html
@@ -16,6 +16,7 @@
   <body>
     <div class="mainContainer">
       <h1>Weather Station</h1>
+      <p class="text">Enter a city in the search bar to find the latest weather updates.</p>
       <input type="text" id="cityInput" placeholder="Enter city:" />
       <button id="submitButton">Submit</button>
       <div id="weatherInfo" class="weatherContainer">
